--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native": ">=0.60.0-rc.0 <1.0.x"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "1.12.1",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/push-notification-ios": "1.10.1",
     "react-native-push-notification": "8.1.1"
   },
